--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-    "name": "docusaurus-plugin-hubspot",
+    "name": "@stackql/docusaurus-plugin-hubspot",
     "version": "1.0.1",
     "description": "A plugin which adds your Hubspot tracking code to your docusaurus docs or blog site.",
     "main": "src/index.js",
+    "publishConfig": {
+      "access": "public"
+    },
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
