--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "@stackql/docusaurus-plugin-hubspot",
   "version": "1.1.0",
   "description": "A plugin which adds your Hubspot tracking code to your docusaurus docs or blog site.",
-  "main": "src/index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build",
+    "watch": "tsc --build --watch"
   },
   "repository": {
     "type": "git",
